opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_css"
bug-reports: "https://github.com/janestreet/ppx_css/issues"
dev-repo: "git+https://github.com/janestreet/ppx_css.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_css/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "async"
  "async_unix"
  "core"
  "core_kernel"
  "core_unix"
  "ppx_here"
  "ppx_jane"
  "ppx_let"
  "ppx_sexp_conv"
  "ppx_string"
  "stdio"
  "virtual_dom"
  "dune"            {>= "2.0.0"}
  "js_of_ocaml"     {>= "5.1.1" & < "5.7.0"}
  "js_of_ocaml-ppx" {>= "5.1.1" & < "5.7.0"}
  "menhirLib"
  "ppxlib"          {>= "0.28.0"}
  "sedlex"          {>= "2.6"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A ppx that takes in css strings and produces a module for accessing the unique names defined within"
description: "
A ppx that takes in css strings and produces a module for accessing the unique names defined within.
"
