opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_css"
bug-reports: "https://github.com/janestreet/ppx_css/issues"
dev-repo: "git+https://github.com/janestreet/ppx_css.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_css/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "am_running_how_js"
  "core"
  "core_kernel"
  "core_unix"
  "file_path"
  "filesystem"
  "ppx_here"
  "ppx_jane"
  "ppx_let"
  "ppx_module_timer"
  "ppx_sexp_conv"
  "ppx_string"
  "ppxlib_jane"
  "virtual_dom"
  "dune"                {>= "3.17.0"}
  "js_of_ocaml"         {>= "6.0.0"}
  "js_of_ocaml-ppx"     {>= "6.0.0"}
  "ocaml-compiler-libs" {>= "v0.11.0"}
  "ocamlgraph"          {= "2.0.0"}
  "ppxlib"              {>= "0.33.0" & < "0.36.0"}
  "sedlex"              {>= "2.6" & < "3.4"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A ppx that takes in css strings and produces a module for accessing the unique names defined within"
description: "
A ppx that takes in css strings and produces a module for accessing the unique names defined within.
"
